# Arcane-Equilibrium

./: .claude.json  .coverage  .gitignore  .gitleaksignore  2026-04-12--Audit4.12_full_program_chain_audit.md  2026-04-12--full_audit_fix_plan_pm_confirmed.md  2026-05-09--audit_fix_verification_v3_summary.md  2026-05-16--full-system-audit-fix-plan.md  2026-05-20--dual-track-architecture-v4.1.md  2026-05-20--dual-track-architecture-v4.2.md  2026-05-20--dual-track-architecture-v4.md  2026-05-20--execution-plan-v5.4.md  2026-05-20--execution-plan-v5.5.md  2026-05-20--lean-direct-alpha-capture-v3.md  2026-05-30--cold_audit_pm_final.md  AE_INVENTORY_CONSOLIDATED.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  DB_TODO.md  DOCUMENTATION_REVIEW_T2.07-LATEST.md  EXTRACTION_SUMMARY.md  FIXTURE_REFACTOR_SUMMARY.md  GOVERNANCE_COMPLIANCE_AUDIT.md  GOVERNANCE_INDEX.md  GOVERNANCE_STRUCTURED_EXTRACT.md  IBKR_TODO.md  L2_TODO.md  LOCAL_PRIVATE_LAYOUT.md  ML_TODO.md  OPENCLAW_INVENTORY_CONSOLIDATED.md  PHASE_3_GAP_AUDIT_REPORT.md  QCTODO.md  QUICK_REFERENCE.txt  README.md  README_CLASSIFICATION.md  REVIEW_T2_CODE_QUALITY.md  RUST_MIGRATION_MASTER_PLAN.md  (+23 more)
rust/: Cargo.toml
rust/openclaw_alr_fit_verifier/: Cargo.toml
rust/openclaw_alr_fit_verifier/src/: contract.rs  lib.rs  verifier.rs
rust/openclaw_alr_fit_verifier/tests/: strict_verifier_contract.rs
rust/openclaw_core/: Cargo.toml  pyproject.toml
rust/openclaw_core/src/: alpha_surface.rs  attention.rs  attribution.rs  backtest.rs  cognitive.rs  context_distiller.rs  cost_gate.rs  dream.rs  execution.rs  governance_core.rs  governance_emit.rs  guardian.rs  h0_gate.rs  hedging_engine.rs  klines.rs  lease_scope.rs  lib.rs  message_bus.rs  opportunity.rs  order_match.rs  portfolio.rs  stop_manager.rs
rust/openclaw_core/tests/: engine_mode_tag_e2e.rs  golden_dataset.rs  golden_extreme.rs  governance_bypass_audit.rs  governance_lease_retrofit.rs  sm_contract.rs
rust/openclaw_engine/: Cargo.toml  build.rs
rust/openclaw_engine/benches/: hot_path_baseline.rs  intent_processor_exposure.rs  m3_emitter_cold_start.rs
rust/openclaw_engine/src/: account_manager.rs  ai_service_client.rs  batch_order_manager.rs  boot_observability.rs  bounded_probe_active_order.rs  bounded_probe_near_touch.rs  bybit_earn_client.rs  bybit_private_ws.rs  bybit_private_ws_status_writer.rs  bybit_rest_client.rs  bybit_rest_client_tests.rs  canary_writer.rs  candidate_evaluation_source_snapshot.rs  candidate_event_context.rs  candidate_event_context_tests.rs  combine_layer.rs  config.rs  cost_edge_advisor_boot.rs  decision_context_producer.rs  demo_learning_lane.rs  demo_learning_lane_hot_path.rs  demo_learning_lane_hot_path_tests.rs  demo_learning_lane_ledger.rs  demo_learning_lane_rotation.rs  demo_learning_lane_soak_gate.rs  demo_learning_lane_tests.rs  demo_learning_lane_writer.rs  drawdown_revoke.rs  dynamic_risk_sizer.rs  edge_estimates.rs  event_consumer.rs  execution_listener.rs  exit_features.rs  fast_track.rs  feature_collector.rs  halt_audit.rs  ibkr_activation_envelope_check.rs  ibkr_activation_envelope_check_tests.rs  ibkr_cash_account_constraints.rs  ibkr_cash_account_constraints_tests.rs  (+86 more)
rust/openclaw_engine/tests/: api_latency_probe_real_impl.rs  btc_lead_lag_panel_fence_integration.rs  demo_lane_contract_xlang_consistency.rs  edge_predictor_ort_backend.rs  g1_06_live_balance_sync_integration.rs  intraday_backfill_real_candle_smoke.rs  lease_flag_flip_e2e.rs  lg3_contract.rs  m12_order_router_stub.rs  m3_amp_cap_24h_fire.rs  m3_cross_lang_window_fixture.rs  m3_emitter_replay_forbidden.rs  m5_model_client_stub_panic.rs  main_scheduler_wireup.rs  micro_profit_fix_integration.rs  migrations_test.rs  phase4_integration.rs  reconciler_e2e.rs  replay_forbidden_guard_acceptance.rs  replay_mac_policy_acceptance.rs  replay_manifest_signer_xlang_consistency.rs  replay_profile_acceptance.rs  replay_runner_e2e.rs  replay_runner_e2e_param_delta.rs  replay_tier_a_acceptance.rs  risk_envelope_probe_real_impl.rs  rrc1_audit_tests.rs  schema_contract_test.rs  sprint2_track_a_engine_runtime.rs  sprint2_track_b_pipeline_throughput.rs  sprint2_track_c_database_pool.rs  sprint2_track_d_api_latency.rs  sprint2_track_e_strategy_quality.rs  sprint2_track_f_risk_envelope.rs  stress_integration.rs  test_cost_edge_advisor_daemon.rs  test_cost_edge_advisor_daemon_dual_safeguard.rs  test_cost_edge_advisor_daemon_proofs.rs  test_cost_edge_advisor_persistence.rs  test_cost_edge_advisor_spawn_decision.rs
rust/openclaw_fake_tws/: Cargo.toml
rust/openclaw_fake_tws/src/: lib.rs
rust/openclaw_pyo3/: Cargo.toml  pyproject.toml
rust/openclaw_pyo3/src/: hedging_engine.rs  lib.rs
rust/openclaw_types/: Cargo.toml
rust/openclaw_types/src/: agent.rs  asset_venue.rs  cognitive.rs  config.rs  ibkr_account_summary_row.rs  ibkr_activation_envelope.rs  ibkr_commissions_row.rs  ibkr_executions_row.rs  ibkr_feature_flag_secret_auth.rs  ibkr_instrument_identity_row.rs  ibkr_market_data_provenance.rs  ibkr_non_bybit_api_allowlist.rs  ibkr_paper_lifecycle.rs  ibkr_phase2_artifact.rs  ibkr_phase2_gate.rs  ibkr_phase2_policies.rs  ibkr_phase2_runtime.rs  ibkr_positions_row.rs  ibkr_quote_row.rs  ibkr_trading_calendar.rs  ibkr_tws_connection_health.rs  ibkr_tws_session_state.rs  intent.rs  lib.rs  price.rs  risk.rs  state.rs  stock_etf_audit_events.rs  stock_etf_broker_capability_registry.rs  stock_etf_db_evidence_ddl.rs  stock_etf_disable_cleanup_runbook.rs  stock_etf_gui_lane_contract.rs  stock_etf_ibkr_readonly_probe_request.rs  stock_etf_ibkr_readonly_probe_result_import_request.rs  stock_etf_instrument_identity.rs  stock_etf_lane.rs  stock_etf_lane_scoped_ipc.rs  stock_etf_paper_fill_import_request.rs  stock_etf_paper_order_request.rs  stock_etf_paper_shadow_reconciliation.rs  (+12 more)
rust/openclaw_types/tests/: ibkr_account_summary_row_acceptance.rs  ibkr_activation_envelope_acceptance.rs  ibkr_commissions_row_acceptance.rs  ibkr_executions_row_acceptance.rs  ibkr_feature_flag_secret_auth_acceptance.rs  ibkr_instrument_identity_row_acceptance.rs  (+38 more)
rust/schemas/: shared_types.json
(+9450 files in other folders)
