[workspace]
members = [
    "openclaw_types",
    "openclaw_core",
    "openclaw_engine",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["OpenClaw Team"]
license = "Apache-2.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
rustls = { version = "0.23", features = ["ring"] }
arc-swap = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
rand = { version = "0.8", features = ["std_rng", "small_rng"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
hmac = "0.12"
sha2 = "0.10"
sha1 = "0.10"
hex = "0.4"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "uuid", "macros", "migrate"] }
ndarray = "0.16"
parking_lot = "0.12"
# P2-LG1-DEMO-SLO-CARVEOUT — H0 hot-path latency observability。
# HdrHistogram 7.x pure Rust + sig_figs=3 ~256KB/instance × 5 engine_mode ≈ 1.3MB。
# Apple Silicon arm64 build clean，無 sys dep（per spec §11.3）。
hdrhistogram = "7"
# M3 metric emitter Sprint 2 Track A — sysinfo 0.32 crate 採樣 process CPU/RSS/
# heartbeat/open_fd/thread/uptime 6 metric。為什麼 0.32：MSRV 1.74 對齊本 workspace
# rustc 1.95；跨平台原生支援 macOS + Linux（per `feedback_cross_platform` +
# `project_mac_deployment_target`），不需 `cfg(target_os = "linux")` 分支寫死。
# per docs/execution_plan/2026-05-22--m3_metric_emitter_sprint2_design_spec.md §3 D1。
sysinfo = "0.32"

[profile.release]
strip = "symbols"
