[package]
name = "openclaw_alr_fit_verifier"
version = "0.1.0"
edition = "2021"
authors = ["OpenClaw Team"]
license = "Apache-2.0"
publish = false
build = false
autobins = false
autoexamples = false
autobenches = false
autotests = false

[lib]
path = "src/lib.rs"

[[test]]
name = "strict_verifier_contract"
path = "tests/strict_verifier_contract.rs"

[dependencies]
base64 = { version = "=0.22.1", default-features = false }
ed25519-dalek = { version = "=2.2.0", default-features = false }
sha2 = { version = "=0.10.9", default-features = false }

[dev-dependencies]
serde_json = "=1.0.149"
