[package]
name = "openclaw_core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openclaw_types = { path = "../openclaw_types" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
thiserror = { workspace = true }
# AMD-2026-05-02-01 Track E E-1: Mutex<DecisionLeaseSm> interior mutability for
# acquire_lease facade（router 端 &GovernanceCore immutable borrow）。
# AMD-2026-05-02-01 Track E E-1：Mutex 內部可變性供 acquire_lease facade 使用。
parking_lot = { workspace = true }
