[package]
name = "openclaw_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openclaw_types = { path = "../openclaw_types" }
openclaw_core = { path = "../openclaw_core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
arc-swap = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
rustls = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ndarray = { workspace = true }
async-trait = "0.1"
feed-rs = "2"
serde_yaml = "0.9"
parking_lot = { workspace = true }
rand = { workspace = true }

# EDGE-P3-1 ort backend — ONNX Runtime 1.24 Rust binding.
# Required over tract-onnx: tract 0.21 implements TreeEnsembleClassifier but
# NOT TreeEnsembleRegressor (ai.onnx.ml opset), which is the op LightGBM's
# onnxmltools converter emits for quantile regression. Verified 2026-04-15:
# zero matches for "TreeEnsembleRegressor" in tract 0.21.15 source tree.
# ort is configured with download-binaries (auto-fetches libonnxruntime.{so,dylib}
# for the target platform at build time) + copy-dylibs (bundles it next to the
# binary) + ndarray (f32 array inputs) + tls-rustls (pure-Rust TLS — avoids
# pulling openssl-sys which would require libssl-dev at build time and break
# the Mac/Linux zero-system-dep story). We explicitly override ort's default
# features to swap tls-native → tls-rustls; everything else in ort's default
# (std/ndarray/tracing/download-binaries/copy-dylibs/api-24) is kept.
# Optional — pulled only when `edge_predictor_ort` feature is on; default
# build ships null_backend alone.
# EDGE-P3-1 ort 後端 — ONNX Runtime 1.24 Rust binding。
# 必須用 ort 因 tract 0.21 沒實作 TreeEnsembleRegressor（LightGBM 匯出必用 op）。
# default features 覆寫 tls-native → tls-rustls 避開 libssl-dev 系統依賴。
ort = { version = "=2.0.0-rc.12", optional = true, default-features = false, features = ["std", "ndarray", "tracing", "download-binaries", "copy-dylibs", "api-24", "tls-rustls"] }

[dev-dependencies]
tempfile = "3"

# ============================================================
# EDGE-P3-1 Realized Edge Predictor — backend feature flag.
# EDGE-P3-1 真實邊緣預測器 — 後端 feature flag。
#
# Default build (no feature): null_backend only (always returns Err(NoModel),
# triggers fallback to shrinkage). Safe to ship; no ort dep pulled, no
# libonnxruntime bundled.
#
# `edge_predictor_ort`: pulls the ort + ort-sys deps (+~20MB libonnxruntime
# dylib for target platform via download-binaries), unlocks `ort_backend`
# module + the `load_predictor_from_path` trio dispatcher, flips
# `engine_capabilities.ipc_methods.reload_edge_predictor` to true.
# ============================================================
[features]
default = []
# Enabling `edge_predictor_ort` pulls the ort runtime + unlocks `ort_backend`
# + the `load_predictor_from_path` trio dispatcher. Without this flag the stub
# path is taken and `load_predictor_from_path` returns Err("onnx_loader_not_wired"),
# preserving the capability contract (reload_edge_predictor=false).
# 開啟 `edge_predictor_ort` 會拉入 ort 並啟用 trio loader；
# 未開啟則走 stub 路徑，維持 capability 契約（reload_edge_predictor=false）。
edge_predictor_ort = ["dep:ort"]

# REF-20 Wave 1 R20-P0-T2 — replay_runner binary marker feature.
# Wave 1: pure feature flag with no extra deps; gates `bin/replay_runner.rs`
# behind compile-time exclusion so default `cargo build` never pulls the
# replay binary into the live engine artifact graph (V3 §3 G7/G8 + §6.1/§6.2).
# Wave 3 R20-P2b-S7/S8/S9/S10 will add allowed-only dependencies (fixture
# loader / HMAC verifier / Mac policy guard / serde / chrono / clap / tracing)
# under this same feature without ever pulling intent_processor / ipc_server /
# build_exchange_pipeline / GovernanceHub / decision_lease.
# REF-20 Wave 1 R20-P0-T2 — replay_runner binary marker feature。
# Wave 1：純 feature flag 無額外依賴；於 compile-time 排除 `bin/replay_runner.rs`，
# 使預設 `cargo build` 永遠不將 replay binary 拉進 live engine artifact graph
# （V3 §3 G7/G8 + §6.1/§6.2）。
# Wave 3 R20-P2b-S7/S8/S9/S10 將在同 feature 下加入 allowed-only 依賴
# （fixture loader / HMAC verifier / Mac policy guard / serde / chrono / clap / tracing）,
# 絕不拉 intent_processor / ipc_server / build_exchange_pipeline / GovernanceHub /
# decision_lease。
replay_isolated = []

[[bin]]
name = "openclaw-engine"
path = "src/main.rs"

[[bench]]
name = "hot_path_baseline"
harness = false

# P2-PORTFOLIO-RESTING-E5-BENCH（2026-05-18）：portfolio gate hot-path
# latency bench（25 symbols × 3 resting）。harness=false 對齊
# hot_path_baseline，無 criterion 依賴。
[[bench]]
name = "intent_processor_exposure"
harness = false

# repair_migration_checksum — standalone tool to detect/repair _sqlx_migrations.checksum drift.
# Borrows engine `database::migrations::load_migrations_from_dir` so checksum
# computation is identical to engine startup verification (sqlx 0.8.6 SHA-384,
# raw bytes, no normalization).
# repair_migration_checksum — _sqlx_migrations.checksum 漂移偵測/修復獨立 binary。
# 借用 engine 的 `database::migrations::load_migrations_from_dir`，確保算法
# 與 engine 啟動驗證一致（sqlx 0.8.6 SHA-384、原始位元組、無 normalization）。
[[bin]]
name = "repair_migration_checksum"
path = "src/bin/repair_migration_checksum.rs"

[[bin]]
name = "feature_baseline_writer"
path = "src/bin/feature_baseline_writer.rs"

# REF-20 Wave 1 R20-P0-T2 — replay_runner binary scaffold.
# Wave 1: scaffold only (`#![cfg(feature = "replay_isolated")]` + `panic!`).
# Wave 3 R20-P2b-S7/S8/S9/S10 lands runtime IMPL (Isolated profile,
# forbidden-path fail-closed, Mac policy guard, CI symbol audit).
# Crate boundary contract: PA report
# `docs/CCAgentWorkSpace/PA/workspace/reports/2026-05-03--replay_runner_crate_boundary_allowlist.md`.
# REF-20 Wave 1 R20-P0-T2 — replay_runner binary 骨架。
# Wave 1：純骨架（`#![cfg(feature = "replay_isolated")]` + `panic!`）。
# Wave 3 R20-P2b-S7/S8/S9/S10 落地 runtime IMPL（Isolated profile、
# forbidden-path fail-closed、Mac policy guard、CI symbol audit）。
# Crate 邊界契約：PA report
# `docs/CCAgentWorkSpace/PA/workspace/reports/2026-05-03--replay_runner_crate_boundary_allowlist.md`。
[[bin]]
name = "replay_runner"
path = "src/bin/replay_runner.rs"
required-features = ["replay_isolated"]
