[package]
name = "openclaw_engine"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
openclaw_types = { path = "../openclaw_types" }
openclaw_core = { path = "../openclaw_core" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
arc-swap = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
thiserror = { workspace = true }
rustls = { workspace = true }
reqwest = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
sha1 = { workspace = true }
hex = { workspace = true }
# Wave 5 Packet C / C1 email follow-up — 真實 SMTP transport（RealSmtpTransport）。
lettre = { workspace = true }
sqlx = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
ndarray = { workspace = true }
async-trait = "0.1"
feed-rs = "2"
serde_yaml = "0.9"
parking_lot = { workspace = true }
rand = { workspace = true }
# M3 metric emitter Sprint 2 Track A — sysinfo 0.32（workspace dep）採樣 process
# 級 CPU/RSS/heartbeat/open_fd/thread/uptime 6 metric；對齊 Mac+Linux 跨平台。
sysinfo = { workspace = true }

# EDGE-P3-1 ort backend — ONNX Runtime 1.24 Rust binding.
# Required over tract-onnx: tract 0.21 implements TreeEnsembleClassifier but
# NOT TreeEnsembleRegressor (ai.onnx.ml opset), which is the op LightGBM's
# onnxmltools converter emits for quantile regression. Verified 2026-04-15:
# zero matches for "TreeEnsembleRegressor" in tract 0.21.15 source tree.
# ort is configured with download-binaries (auto-fetches libonnxruntime.{so,dylib}
# for the target platform at build time) + copy-dylibs (bundles it next to the
# binary) + ndarray (f32 array inputs) + tls-rustls (pure-Rust TLS — avoids
# pulling openssl-sys which would require libssl-dev at build time and break
# the Mac/Linux zero-system-dep story). We explicitly override ort's default
# features to swap tls-native → tls-rustls; everything else in ort's default
# (std/ndarray/tracing/download-binaries/copy-dylibs/api-24) is kept.
# Optional — pulled only when `edge_predictor_ort` feature is on; default
# build ships null_backend alone.
# EDGE-P3-1 ort 後端 — ONNX Runtime 1.24 Rust binding。
# 必須用 ort 因 tract 0.21 沒實作 TreeEnsembleRegressor（LightGBM 匯出必用 op）。
# default features 覆寫 tls-native → tls-rustls 避開 libssl-dev 系統依賴。
ort = { version = "=2.0.0-rc.12", optional = true, default-features = false, features = ["std", "ndarray", "tracing", "download-binaries", "copy-dylibs", "api-24", "tls-rustls"] }

[dev-dependencies]
tempfile = "3"
# Sprint 1A-ζ Track B — M3 spike test 改採 observe_at 注入 std::time::Instant
# (per spec §AC-5.1 mock time hook 設計 + dispatch §2.7 反模式邊界), 不需要
# tokio::time::pause / advance mock clock。tokio test-util 已從 dev-dep 移除
# (避免 dead dependency noise);若 Sprint 5 cascade IMPL 真的需要 tokio 虛擬
# 時鐘再補回。

# ============================================================
# EDGE-P3-1 Realized Edge Predictor — backend feature flag.
# EDGE-P3-1 真實邊緣預測器 — 後端 feature flag。
#
# Default build (no feature): null_backend only (always returns Err(NoModel),
# triggers fallback to shrinkage). Safe to ship; no ort dep pulled, no
# libonnxruntime bundled.
#
# `edge_predictor_ort`: pulls the ort + ort-sys deps (+~20MB libonnxruntime
# dylib for target platform via download-binaries), unlocks `ort_backend`
# module + the `load_predictor_from_path` trio dispatcher, flips
# `engine_capabilities.ipc_methods.reload_edge_predictor` to true.
# ============================================================
[features]
default = []
# Enabling `edge_predictor_ort` pulls the ort runtime + unlocks `ort_backend`
# + the `load_predictor_from_path` trio dispatcher. Without this flag the stub
# path is taken and `load_predictor_from_path` returns Err("onnx_loader_not_wired"),
# preserving the capability contract (reload_edge_predictor=false).
# 開啟 `edge_predictor_ort` 會拉入 ort 並啟用 trio loader；
# 未開啟則走 stub 路徑，維持 capability 契約（reload_edge_predictor=false）。
edge_predictor_ort = ["dep:ort"]

# REF-20 Wave 1 R20-P0-T2 — replay_runner binary marker feature.
# Wave 1: pure feature flag with no extra deps; gates `bin/replay_runner.rs`
# behind compile-time exclusion so default `cargo build` never pulls the
# replay binary into the live engine artifact graph (V3 §3 G7/G8 + §6.1/§6.2).
# Wave 3 R20-P2b-S7/S8/S9/S10 will add allowed-only dependencies (fixture
# loader / HMAC verifier / Mac policy guard / serde / chrono / clap / tracing)
# under this same feature without ever pulling intent_processor / ipc_server /
# build_exchange_pipeline / GovernanceHub / decision_lease.
# REF-20 Wave 1 R20-P0-T2 — replay_runner binary marker feature。
# Wave 1：純 feature flag 無額外依賴；於 compile-time 排除 `bin/replay_runner.rs`，
# 使預設 `cargo build` 永遠不將 replay binary 拉進 live engine artifact graph
# （V3 §3 G7/G8 + §6.1/§6.2）。
# Wave 3 R20-P2b-S7/S8/S9/S10 將在同 feature 下加入 allowed-only 依賴
# （fixture loader / HMAC verifier / Mac policy guard / serde / chrono / clap / tracing）,
# 絕不拉 intent_processor / ipc_server / build_exchange_pipeline / GovernanceHub /
# decision_lease。
replay_isolated = []

# Sprint 1A-ζ Track B — M3 health monitoring spike feature flag。
# 只在 spike scope 啟用 mock time hook (tokio::time::pause/advance) + spike
# 對抗測試 harness; production build 不帶 --features spike → mock 路徑與測試
# 完全不編譯進 binary; 0 production code path 污染。
# per docs/execution_plan/2026-05-21--sprint_1a_zeta_impl_spike_scope_spec.md §AC-5.1。
spike = []

[[bin]]
name = "openclaw-engine"
path = "src/main.rs"

[[bench]]
name = "hot_path_baseline"
harness = false

# P2-PORTFOLIO-RESTING-E5-BENCH（2026-05-18）：portfolio gate hot-path
# latency bench（25 symbols × 3 resting）。harness=false 對齊
# hot_path_baseline，無 criterion 依賴。
[[bench]]
name = "intent_processor_exposure"
harness = false

# Sprint 5+ Wave 1 §4.3.2 AC-7（2026-05-23）：m3 metric_emitter scheduler
# cold start bench — 量測 MetricEmitterScheduler::new + run 進入 first tick
# wall-clock < 50ms。harness=false 對齊既有 bench plain main 範式，0
# criterion dev-dep；對應 PA spec docs/execution_plan/specs/
# 2026-05-23--sprint5_wave1_4_3_2_ac7_m3_cold_start_bench.md §AC-7。
[[bench]]
name = "m3_emitter_cold_start"
harness = false

# repair_migration_checksum — standalone tool to detect/repair _sqlx_migrations.checksum drift.
# Borrows engine `database::migrations::load_migrations_from_dir` so checksum
# computation is identical to engine startup verification (sqlx 0.8.6 SHA-384,
# raw bytes, no normalization).
# repair_migration_checksum — _sqlx_migrations.checksum 漂移偵測/修復獨立 binary。
# 借用 engine 的 `database::migrations::load_migrations_from_dir`，確保算法
# 與 engine 啟動驗證一致（sqlx 0.8.6 SHA-384、原始位元組、無 normalization）。
[[bin]]
name = "repair_migration_checksum"
path = "src/bin/repair_migration_checksum.rs"

[[bin]]
name = "feature_baseline_writer"
path = "src/bin/feature_baseline_writer.rs"

# PA daily-kline backfill（2026-06-02）：日線（timeframe='1d'）歷史回填 CLI。
# dry-run 預設 + --apply/env gate（鏡像 feature_baseline_writer）。V125 preflight
# fail-closed（research.alpha_klines_provenance 缺表退出）。寫 market.klines（與 live
# 1m-1h disjoint, ON CONFLICT DO NOTHING）+ append-only provenance 帳本。C-3 strict-parse
# 拒 fake-zero/非有限 bar，絕不寫 0.0。
[[bin]]
name = "daily_kline_backfill"
path = "src/bin/daily_kline_backfill.rs"

# intraday K 線歷史回填（2026-06-15，research-unblock 交付物 A）：用 Bybit REST aggregated-
# candle 路徑（與正確的 daily 回填同源）回填 1m/5m/15m/1h/4h 至 market.klines + provenance，
# 取代 live WebSocket tick-synth 路徑產生的退化單快照 bar。鏡像 daily_kline_backfill 安全骨架
# （dry-run 預設 + --apply/env gate OPENCLAW_INTRADAY_KLINE_BACKFILL_APPLY + V125 preflight）。
# --interval {1|5|15|60|240}（可重複，省略=全 5 個）。★衝突關鍵：寫的 timeframe 與 live 壞行
# 同 PK，--apply 預設走 vol-turnover-only DO UPDATE（只校正既有行 volume+turnover，絕不碰
# OHLC/tick_count，保護 outcome_backfiller 的 close 依賴）；--upsert-overwrite 顯式升級為全
# OHLCV 覆蓋。壓縮 hypertable 上的 DO UPDATE 需 operator 先 decompress 目標窗。不改 live
# writer 的 DO NOTHING。
[[bin]]
name = "intraday_kline_backfill"
path = "src/bin/intraday_kline_backfill.rs"

# funding + OI 歷史回填（2026-06-02）：funding rate（/v5/market/funding/history）+ open
# interest（/v5/market/open-interest, intervalTime=1h）歷史回填 CLI。dry-run 預設 +
# --apply/env gate（鏡像 daily_kline_backfill）。V125 preflight fail-closed（2 history +
# 2 ledger 表缺即退出）。寫 alpha_funding_rates_history / alpha_open_interest_history +
# alpha_history_ingest_runs/pages 帳本。★ strict-parse VARIANT：讀原始 JSON，「欄位存在 AND
# finite」而非 >0 floor — 保留真 0.0/負 funding，只擋 missing/non-finite。禁碰 cap。
[[bin]]
name = "funding_oi_backfill"
path = "src/bin/funding_oi_backfill.rs"

# REF-20 Wave 1 R20-P0-T2 — replay_runner binary scaffold.
# Wave 1: scaffold only (`#![cfg(feature = "replay_isolated")]` + `panic!`).
# Wave 3 R20-P2b-S7/S8/S9/S10 lands runtime IMPL (Isolated profile,
# forbidden-path fail-closed, Mac policy guard, CI symbol audit).
# Crate boundary contract: PA report
# `docs/CCAgentWorkSpace/PA/workspace/reports/2026-05-03--replay_runner_crate_boundary_allowlist.md`.
# REF-20 Wave 1 R20-P0-T2 — replay_runner binary 骨架。
# Wave 1：純骨架（`#![cfg(feature = "replay_isolated")]` + `panic!`）。
# Wave 3 R20-P2b-S7/S8/S9/S10 落地 runtime IMPL（Isolated profile、
# forbidden-path fail-closed、Mac policy guard、CI symbol audit）。
# Crate 邊界契約：PA report
# `docs/CCAgentWorkSpace/PA/workspace/reports/2026-05-03--replay_runner_crate_boundary_allowlist.md`。
[[bin]]
name = "replay_runner"
path = "src/bin/replay_runner.rs"
required-features = ["replay_isolated"]
