# MODULE_NOTE:
# PyO3 bridge crate — exposes Rust modules to Python as `openclaw_core`.
# PyO3 橋接 crate — 將 Rust 模組以 `openclaw_core` 名稱暴露給 Python。
#
# This is the ONLY crate with `cdylib` + `extension-module`.
# 這是唯一具有 `cdylib` + `extension-module` 的 crate。

[package]
name = "openclaw_pyo3"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "openclaw_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { workspace = true, features = ["extension-module", "multiple-pymethods"] }
openclaw_types = { path = "../openclaw_types" }
openclaw_core = { path = "../openclaw_core" }
openclaw_engine = { path = "../openclaw_engine" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
pythonize = "0.24"
