# MODULE_NOTE:
# Maturin build config for openclaw_pyo3. module-name keeps Python imports unchanged.
# Maturin 構建配置。module-name 確保 Python 端 import 路徑不變。

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "openclaw_core"
version = "0.1.0"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "openclaw_core"
